# my_surprise

./: .gitignore  pyproject.toml
aml/01_feml/: 01_lineal_regression.ipynb  02_hw_logistic_regression.ipynb  02_logistic_regression.ipynb  03_hw_gradient_descent.ipynb  04_hw_classification_metrics.ipynb  07_hw_features.ipynb  08_hw_decision_tree.ipynb  09_hw_ensemble.ipynb  10_hw_abnormal_data.ipynb  Coding_logistic_regression.ipynb  balakirev_binari_classific.ipynb  balakirev_gd.ipynb  balakirev_sgd.ipynb  makarov_LogisticRegression.ipynb  ponomareva_practice_decision_tree_stop_criteria.ipynb  rashka_logistic_regression.ipynb  serrano_logistic_regression.ipynb
aml/01_feml/metrics/: classification_metrics_accuracy.ipynb  classification_metrics_f-score.ipynb  classification_metrics_pr_auc.ipynb  classification_metrics_precision_recall.ipynb  classification_metrics_roc_auc.ipynb  confusion_matrix.ipynb
aml/deep_learn/: optimization_nw.ipynb
aml/pandas/: pandas_DataFrame.ipynb  pandas_Series.ipynb
aml/rsml_18/: HW01_RSML.ipynb  HW02_RSML.ipynb  Lesson_1.ipynb  Lesson_2.ipynb  Lesson_3.ipynb  lecture-1.ipynb
